--- a/MC-Server Status (Widget)/Layouts/MainLayer.xml
+++ b/MC-Server Status (Widget)/Layouts/MainLayer.xml
@@ -513,6 +513,32 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
+                <instance type="PW" uid="15">
+                    <properties>
+                        <text></text>
+                        <placeholder></placeholder>
+                        <tooltip></tooltip>
+                        <initial-visibility>Visible</initial-visibility>
+                        <enabled>Yes</enabled>
+                        <read-only>No</read-only>
+                        <spell-check>No</spell-check>
+                        <type>Text</type>
+                        <auto-font-size>Yes</auto-font-size>
+                        <id-optional>InputText</id-optional>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>5.540985107</x>
+                        <y>275.00100708</y>
+                        <z>0</z>
+                        <width>156.762008667</width>
+                        <height>22.181999207</height>
+                        <depth>0</depth>
+                        <hotspotX>0</hotspotX>
+                        <hotspotY>0</hotspotY>
+                    </world>
+                </instance>
             </instances>
             <effects />
         </layer>
